hello1.yml
apiVersion: v1
kind: Service
metadata:
  name: hellofirst
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hellofirst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellofirst
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellofirst
  template:
    metadata:
      labels:
        app: hellofirst
    spec:
      containers:
      - name: hellofirst
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
